# VTF_Edit_Revitalized

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cake.vtf  main.cpp  white_concrete.vtf
.github/workflows/: build.yml
common/: VTFEImageFormat.cpp  VTFEImageFormat.h  enums.cpp  enums.hpp  flagsandformats.hpp  util.hpp
dialogs/: VTFEAbout.cpp  VTFEAbout.h  VTFEConfigFile.cpp  VTFEConfigFile.h  VTFEImport.cpp  VTFEImport.h  VTFEdit.cpp  VTFEdit.h
libs/QColorWheel/: CMakeLists.txt  QtColorTriangle.cpp  QtColorTriangle.h
src/: ImageSettingsWidget.cpp  ImageSettingsWidget.h  ImageViewWidget.cpp  ImageViewWidget.h  InfoWidget.cpp  MainWindow.cpp  MainWindow.h  Options.cpp  Options.h  ResourceWidget.cpp  VTFEImageFormat.h  VTFEImport.cpp  VTFEImport.h  flagsandformats.hpp
src/res/: res.qrc
src/shaders/: fragment.glsl  vertex.glsl
src/supported_formats/: TiffSupport.cpp  TiffSupport.h
widgets/: ImageSettingsWidget.cpp  ImageSettingsWidget.h  ImageViewWidget.cpp  ImageViewWidget.h  InfoWidget.cpp  InfoWidget.h  ResourceWidget.cpp  ResourceWidget.h  VMTQSyntaxHighlighter.cpp  VMTQSyntaxHighlighter.h  VPKDirectoryHandler.cpp  VPKDirectoryHandler.h  VTFQColorWheel.cpp  VTFQColorWheel.h  VTFQMenuBar.cpp  VTFQMenuBar.h
